<resources>
    <string name="app_name">harj2_kayttoliittyma</string>
    <string name="string_zero">0.0</string>
    <string name="string_add">+</string>
    <string name="string_subtract">-</string>
    <string name="string_multiply">x</string>
    <string name="string_divide">/</string>
    <string name="butt_calculate">=</string>
    <string name="butt_clear">Tyhjennä kaikki</string>
</resources>
